WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44998
[GTK] warning: unused variable "queryResult"
https://bugs.webkit.org/show_bug.cgi?id=44998
Summary
[GTK] warning: unused variable "queryResult"
Martin Robinson
Reported
2010-08-31 15:14:34 PDT
I see this warning on the build bots whenever WebCore/platform/graphics/gstreamer/GStreamerGWorld.cpp is built.
Attachments
Patch for this issue
(1.65 KB, patch)
2010-08-31 17:00 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
second fix proposal
(2.07 KB, patch)
2010-09-01 12:52 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-08-31 17:00:41 PDT
Created
attachment 66143
[details]
Patch for this issue
WebKit Commit Bot
Comment 2
2010-08-31 21:28:01 PDT
Comment on
attachment 66143
[details]
Patch for this issue Clearing flags on attachment: 66143 Committed
r66573
: <
http://trac.webkit.org/changeset/66573
>
WebKit Commit Bot
Comment 3
2010-08-31 21:28:05 PDT
All reviewed patches have been landed. Closing bug.
Philippe Normand
Comment 4
2010-09-01 12:52:51 PDT
Created
attachment 66248
[details]
second fix proposal
Philippe Normand
Comment 5
2010-09-01 12:54:49 PDT
Reopening, with the patch commited the newsegment propagation is likely to fail if WebKitGTK has been built with gstreamer < 0.10.30
Martin Robinson
Comment 6
2010-09-01 12:56:46 PDT
Comment on
attachment 66248
[details]
second fix proposal LGTM. Thanks for fixing this.
Philippe Normand
Comment 7
2010-09-01 23:49:42 PDT
http://trac.webkit.org/changeset/66645
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug