2010-08-31  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Adam Barth.

        [GTK] warning: unused variable "queryResult"
        https://bugs.webkit.org/show_bug.cgi?id=44998

        No new tests as functionality has not changed.

        * platform/graphics/gstreamer/GStreamerGWorld.cpp:
        (WebCore::GStreamerGWorld::enterFullscreen): Move queryResult within the gstreamer
        version guards, where it is used.

Canonical link: https://commits.webkit.org/57333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66573 268f45cc-cd09-0410-ab3c-d52691b4dbfc