WebCore/platform/graphics/gstreamer/GStreamerGWorld.cpp
@@ -113,10 +113,10 @@ bool GStreamerGWorld::enterFullscreen()
     // the new tee branch downstream.
 
     GstQuery* query = gst_query_new_segment(GST_FORMAT_TIME);
-    gboolean queryResult = gst_element_query(m_pipeline, query);
 
     // See https://bugzilla.gnome.org/show_bug.cgi?id=620490.
 #if GST_CHECK_VERSION(0, 10, 30)
+    gboolean queryResult = gst_element_query(m_pipeline, query);
     if (!queryResult) {
         gst_query_unref(query);
         gst_object_unref(GST_OBJECT(srcPad));
